[package]
name = "read_pdf"
version = "0.1.0"
authors = ["WINSDK <winsdk@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lopdf = "0.26"
regex = "1.4"
reqwest = "0.10.9"
tokio = { version = "0.2", features = ["full"] }
